[package]
name = "focusvent"
version = "0.1.0"
authors = ["werner <werner@yahoo.es>"]

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { features = ["postgres"], git = "https://github.com/werner/diesel", branch = "public_offset" }
dotenv = "0.9.0"
regex = "1"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
