[package]
name = "focusvent"
version = "0.1.0"
authors = ["werner <werner@yahoo.es>"]
edition = "2018"

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
diesel-derive-newtype = "0.1.2"
dotenv = "0.9.0"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel-derive-enum = { version = "0.4", features = ["postgres"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
